--- a/style.css
+++ b/style.css
@@ -61,6 +61,11 @@ nav ul {
   margin: auto;
   margin-top: 25px;
   text-align: center;
+  border-radius: 10px;
+}
+
+#spacing-lesson .round {
+  border-radius: 30px;
 }
 
 .inline-div {
